--- a/index.html
+++ b/index.html
@@ -697,6 +697,20 @@
     height: clamp(70px, 18vw, 100px);
   }
 
+        /* الكأس */
+      .card .bottom-icon:last-child {
+        font-size: 42px;
+        left: -25px;
+        top: -8px;
+      }
+      
+      /* الميدالية - الشاشات المتوسطة */
+      .card .bottom-icon:first-child {
+        font-size: 42px;
+        top: -5px;
+        right: -25px;
+      }
+  
   .player-name-section {
     font-size: clamp(11px, 2vw, 14px);
     max-width: clamp(80px, 25vw, 120px);
